--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,11 @@ footer {
 
   #column-3 {
     background-color: navy;
+    width: 100%;
+  }
+  
+  .col-3 {
+    width: 50%;
   }
 
   footer {
@@ -98,6 +103,11 @@ footer {
 
   #column-3 {
     background-color: gainsboro;
+    width: 33.3%;
+  }
+  
+  .col-3 {
+    width: 33.3%;
   }
 
   footer {
